<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvwTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/add_question"
            android:textSize="43sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linEdtContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingHorizontal="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvwTitle">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ddwBanks"
                style="@style/DropDown"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".16"
                android:hint="@string/question_bank">

                <AutoCompleteTextView
                    android:id="@+id/actBanks"
                    style="@style/DropDown.AutoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/Question"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="12dp"
                android:layout_weight=".16"
                android:hint="@string/question_name"
                android:padding="16dp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/answer1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="12dp"
                android:layout_weight=".16"
                android:hint="@string/answer"
                android:padding="16dp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/answer2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="12dp"
                android:layout_weight=".16"
                android:hint="@string/answer"
                android:padding="16dp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/answer3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="12dp"
                android:layout_weight=".16"
                android:hint="@string/answer"
                android:padding="16dp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/answer4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="12dp"
                android:layout_weight=".16"
                android:hint="@string/answer"
                android:padding="16dp" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/rdgCorrectAnswer"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="64dp"
            android:gravity="center_horizontal"
            app:layout_constraintBottom_toBottomOf="@id/linEdtContainer"
            app:layout_constraintEnd_toEndOf="@id/linEdtContainer"
            app:layout_constraintTop_toBottomOf="@id/tvwTitle">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight=".16" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight=".16" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rdbCorrectAnswer1"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight=".16" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rdbCorrectAnswer2"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight=".16" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rdbCorrectAnswer3"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight=".16" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rdbCorrectAnswer4"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight=".16" />

        </RadioGroup>

        <Button
            android:id="@+id/btn_Add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:enabled="false"
            android:text="@string/add_question"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linEdtContainer" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>